# example-model-main

./: .env_template  .flake8  .gitignore  .gitlab-ci_template.yml  .mypy.ini  .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  config.sh  dvc.yaml  params.yaml  pdm.toml  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
.dvc/: config
.dvc/plot_template/: bars_template.json
dvclive/: metrics.json
dvclive/plots/metrics/: false_negative.tsv  false_positive.tsv  true_negative.tsv  true_positive.tsv
evaluation/: metrics.json
mlflow_db/0/: meta.yaml
script/: source-env.sh
script/build_material/: example_usage.py
script/dvc/: 01_dvc_import.py  02_dvc_prepare.py  03_dvc_train.py  04_dvc_predict.py  05_dvc_evaluate_classifier.py  07_dvc_build.sh  dvc-help.md
script/installation/: check_tensorflow_gpu.py  check_torch_gpu.py  from_scratch_dependency_installation.sh  install_linux_quarto.sh  setup_cuda_in_dotenv.sh
script/notebook/: info.md
src/app/: cli.py
src/app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/core/config/: __init__.py  _config.py  _dvc_params.py  _settings.py
src/app/core/serializer/: dataframe.py  json_storage.py  model_storage.py  yaml_storage.py
src/app/tool/: __init__.py  _logger.py
test/: test_template.sh
