[project]
name = "app"
version = "0.1.0"
description = "This is a short project description."
authors = [
    {name = "AI Team", email = "info@aiteam.it"},
]
license = {file = "LICENSE"}
dependencies = [
    "polars>=0.20.31",
    "pandas>=2.0.0",
    "typer>=0.12.3",
    "pydantic[dotenv]>=2.7.4",
    "scikit-learn>=1.5.0",
    "pyarrow>=16.1.0",
    "pydantic-settings>=2.3.4",
    "mkdocs-minify-plugin>=0.8.0",
    "matplotlib>=3.9.0",
    "ipywidgets>=8.1.3",
    "plotly>=5.22.0",
]
requires-python = ">=3.12"
readme = "README.md"

[tool.pdm.dev-dependencies]
dvc = [
    "dvclive>=3.46.1",
    "pytest>=8.2.2",
]
[project.optional-dependencies]
doc = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.27",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocstrings>=0.25.1",
    "mkdocs-autorefs>=1.0.1",
    "mkdocs-simple-plugin>=3.1.0",
    "mkdocs-jupyter>=0.24.7",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-gallery>=0.10.1",
    "mkdocstrings-crystal>=0.3.7",
]
[tool.pdm]
distribution = true
